force-app/main/default/objects/Declarative_task__mdt/Declarative_task__mdt.object-meta.xml
<CustomObject>
    <description>Setup data for task generation button</description>
    <label>Declarative task</label>
    <pluralLabel>Declarative tasks</pluralLabel>
</CustomObject>