force-app/main/default/objects/Declarative_task__mdt/fields/assign_to__c.field-meta.xml
<CustomField>
    <fullName>assign_to__c</fullName>
    <description>required task field...</description>
    <label>assign to</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>