force-app/main/default/objects/Declarative_task__mdt/fields/CallDisposition__c.field-meta.xml
<CustomField>
    <fullName>CallDisposition__c</fullName>
    <label>CallDisposition</label>
    <type>TextArea</type>
</CustomField>