force-app/main/default/objects/Declarative_task__mdt/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Class variable - Sets the task button as inactive for this Sobject</description>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>