force-app/main/default/objects/Declarative_task__mdt/fields/IsReminderSet__c.field-meta.xml
<CustomField>
    <fullName>IsReminderSet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsReminderSet</label>
    <type>Checkbox</type>
</CustomField>