force-app/main/default/objects/Declarative_task__mdt/fields/objectAPIName1__c.field-meta.xml
<CustomField>
    <fullName>objectAPIName1__c</fullName>
    <label>Supported Sobject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>