force-app/main/default/objects/Declarative_task__mdt/fields/objectAPIName__c.field-meta.xml
<CustomField>
    <fullName>objectAPIName__c</fullName>
    <label>objectAPIName</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Declarative_tasks</relationshipLabel>
    <relationshipName>Declarative_tasks</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
    <unique>true</unique>
</CustomField>