force-app/main/default/objects/Declarative_task__mdt/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <inlineHelpText>the 18 character id for the user record or the current user.</inlineHelpText>
    <label>OwnerId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>