force-app/main/default/objects/Declarative_task__mdt/fields/subject__c.field-meta.xml
<CustomField>
    <fullName>subject__c</fullName>
    <inlineHelpText>...</inlineHelpText>
    <label>subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>