force-app/main/default/objects/Declarative_task__mdt/fields/WhoId__c.field-meta.xml
<CustomField>
    <fullName>WhoId__c</fullName>
    <label>WhoId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>